--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,8 @@
             SHARE</button>
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
-            <a href="resume.html" class="nav-link">RESUME</a>
-            <a href="portfolio.html" class="nav-link">PORTFOLIO</a>
-            <a href="blog.html" class="nav-link active">BLOG</a>
-            <a href="contact.html" class="nav-link">CONTACT</a>
+            <a href="resume.html" class="nav-link">CURRICULUM</a>
+            <a href="contact.html" class="nav-link active">CONTACTO</a>
         </nav>
         <button class="btn btn-menu-toggle btn-white rounded-circle" data-toggle="collapsible-nav"
             data-target="collapsible-nav"><img src="assets/images/hamburger.svg" alt="hamburger"></button>
@@ -43,13 +41,13 @@
                 <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
-                <h5 class="widget-title">personal information</h5>
+                <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
-                    <p>BIRTHDAY : 15 April 1990</p>
-                    <p>WEBSITE : www.example.com</p>
-                    <p>PHONE : +1 123 000 4444</p>
-                    <p>MAIL : your@example.com</p>
-                    <p>Location : California, USA</p>
+                    <p>Nascimento: 07 Agosto 1998</p>
+                    <p>Site : github.com/luaneng</p>
+                    <p>Número : +55 42 984449614</p>
+                    <p>E-mail : launoliveiar@gmail.com</p>
+                    <p>Endereço : Guarapuava-PR, Vila Bela</p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img
                             src="assets/images/download.svg" alt="download" class="btn-img">DOWNLOAD CV </button>
                 </div>
@@ -57,17 +55,16 @@
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
-                        <h5 class="widget-title card-title">LANGUAGES</h5>
-                        <p>English : native</p>
-                        <p>Spanish : fluent</p>
-                        <p>Italian : fluent</p>
+                        <h5 class="widget-title card-title">LINGUAGENS</h5>
+                        <p>Português : Nativo</p>
+                        <p>Inglês  : Básico</p>
                     </div>
                 </div>
             </div>
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
-                        <h5 class="widget-title card-title">INTERESTS</h5>
+                        <h5 class="widget-title card-title">INTERESSES</h5>
                         <p>Video games</p>
                         <p>Finance</p>
                         <p>Basketball</p>
