--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <button class="btn btn-white btn-share ml-auto mr-3 ml-md-0 mr-md-auto"><img src="assets/images/share.svg" alt="share" class="btn-img">
             SHARE</button>
         <nav class="collapsible-nav" id="collapsible-nav">
-            <a href="index.html" class="nav-link active">HOME</a>
-            <a href="resume.html" class="nav-link">RESUME</a>
-            <a href="portfolio.html" class="nav-link">PORTFOLIO</a>
-            <a href="blog.html" class="nav-link">BLOG</a>
-            <a href="contact.html" class="nav-link">CONTACT</a>
+            <a href="index.html" class="nav-link">HOME</a>
+            <a href="resume.html" class="nav-link">CURRICULUM</a>
+            <a href="contact.html" class="nav-link active">CONTACTO</a>
         </nav>
         <button class="btn btn-menu-toggle btn-white rounded-circle" data-toggle="collapsible-nav"
             data-target="collapsible-nav"><img src="assets/images/hamburger.svg" alt="hamburger"></button>
@@ -30,9 +28,9 @@
             <div class="profile-img-wrapper">
                 <img src="assets/images/Profile.png" alt="profile">
             </div>
-            <h1 class="profile-name">Daisy Murphy</h1>
+            <h1 class="profile-name">Luan Henrique</h1>
             <div class="text-center">
-                <span class="badge badge-white badge-pill profile-designation">UI / UX Designer</span>
+                <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
                 <a href="#!" class="social-link"><i class="fab fa-facebook-f"></i></a>
@@ -42,13 +40,13 @@
                 <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
-                <h5 class="widget-title">personal information</h5>
+                <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
-                    <p>BIRTHDAY : 15 April 1990</p>
-                    <p>WEBSITE : www.example.com</p>
-                    <p>PHONE : +1 123 000 4444</p>
-                    <p>MAIL : your@example.com</p>
-                    <p>Location : California, USA</p>
+                    <p>NASCIMENTO: 07 Agosto 1998</p>
+                    <p>SITE : github.com/luaneng</p>
+                    <p>NÚMERO : +55 42 984449614</p>
+                    <p>EMAIL : launoliveiar@gmail.com</p>
+                    <p>ENDEREÇO : Guarapuava-PR, Vila Bela</p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
                         class="btn-img">DOWNLOAD CV </button>
                 </div>
@@ -56,17 +54,16 @@
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
-                        <h5 class="widget-title card-title">LANGUAGES</h5>
-                        <p>English : native</p>
-                        <p>Spanish : fluent</p>
-                        <p>Italian : fluent</p>
+                        <h5 class="widget-title card-title">LINGUAGENS</h5>
+                        <p>Português : Nativo</p>
+                        <p>Inglês  : Básico</p>
                     </div>
                 </div>
             </div>
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
-                        <h5 class="widget-title card-title">INTERESTS</h5>
+                        <h5 class="widget-title card-title">INTERESSES</h5>
                         <p>Video games</p>
                         <p>Finance</p>
                         <p>Basketball</p>
@@ -89,36 +86,33 @@
             <section class="resume-section">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h6 class="section-subtitle">RESUME</h6>
-                        <h2 class="section-title">EDUCATION</h2>
+                        <h6 class="section-subtitle">CURRICULO</h6>
+                        <h2 class="section-title">EDUCAÇÃO</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1998 - 2005</span>
-                                <h6 class="time-line-item-title">Master In Computer Science</h6>
-                                <p class="time-line-item-subtitle">MASTER, UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.</p>
+                                <span class="badge badge-primary">2018 - 2022</span>
+                                <h6 class="time-line-item-title">Engenharia Mecânica</h6>
+                                <p class="time-line-item-subtitle">Universidade Tecnológica Federal do Paraná - UTFPR</p>
+                                <p class="time-line-item-content">Descrição.</p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1995 - 1998</span>
-                                <h6 class="time-line-item-title">Studied at Harvard University</h6>
-                                <p class="time-line-item-subtitle">UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.
+                                <span class="badge badge-primary">2019</span>
+                                <h6 class="time-line-item-title">Computational Thinking using Python</h6>
+                                <p class="time-line-item-subtitle">edX</p>
+                                <p class="time-line-item-content">Descrição.
                                 </p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1993 - 1995</span>
-                                <h6 class="time-line-item-title">Studied at Oxford University</h6>
-                                <p class="time-line-item-subtitle">UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.
+                                <span class="badge badge-primary">2015</span>
+                                <h6 class="time-line-item-title">INGLÊS INTRODUÇÃO</h6>
+                                <p class="time-line-item-subtitle">SENAC</p>
+                                <p class="time-line-item-content">Descrição.
                                 </p>
                             </li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
-                        <h6 class="section-subtitle">RESUME</h6>
+                        <h6 class="section-subtitle">CURRICULO</h6>
                         <h2 class="section-title">Experience</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
@@ -153,7 +147,7 @@
             </section>
             <section class="services-section">
                 <h6 class="section-subtitle">WHAT I DO</h6>
-                <h2 class="section-title">SERVICES</h2>
+                <h2 class="section-title">HABILIDADES</h2>
                 <div class="row">
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
