--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,8 @@
             SHARE</button>
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
-            <a href="resume.html" class="nav-link">RESUME</a>
-            <a href="portfolio.html" class="nav-link active">PORTFOLIO</a>
-            <a href="blog.html" class="nav-link">BLOG</a>
-            <a href="contact.html" class="nav-link">CONTACT</a>
+            <a href="resume.html" class="nav-link">CURRICULUM</a>
+            <a href="contact.html" class="nav-link active">CONTACTO</a>
         </nav>
         <button class="btn btn-menu-toggle btn-white rounded-circle" data-toggle="collapsible-nav"
             data-target="collapsible-nav"><img src="assets/images/hamburger.svg" alt="hamburger"></button>
@@ -30,9 +28,9 @@
             <div class="profile-img-wrapper">
                 <img src="assets/images/Profile.png" alt="profile">
             </div>
-            <h1 class="profile-name">Daisy Murphy</h1>
+            <h1 class="profile-name">Luan Henrique</h1>
             <div class="text-center">
-                <span class="badge badge-white badge-pill profile-designation">UI / UX Designer</span>
+                <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
                 <a href="#!" class="social-link"><i class="fab fa-facebook-f"></i></a>
@@ -42,13 +40,13 @@
                 <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
-                <h5 class="widget-title">personal information</h5>
+                <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
-                    <p>BIRTHDAY : 15 April 1990</p>
-                    <p>WEBSITE : www.example.com</p>
-                    <p>PHONE : +1 123 000 4444</p>
-                    <p>MAIL : your@example.com</p>
-                    <p>Location : California, USA</p>
+                    <p>Nascimento: 07 Agosto 1998</p>
+                    <p>Site : github.com/luaneng</p>
+                    <p>Número : +55 42 984449614</p>
+                    <p>E-mail : launoliveiar@gmail.com</p>
+                    <p>Endereço : Guarapuava-PR, Vila Bela</p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
                         class="btn-img">DOWNLOAD CV </button>
                 </div>
@@ -56,17 +54,17 @@
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
-                        <h5 class="widget-title card-title">LANGUAGES</h5>
-                        <p>English : native</p>
-                        <p>Spanish : fluent</p>
-                        <p>Italian : fluent</p>
+                        <h5 class="widget-title card-title">LINGUAGENS</h5>
+                        <p>Português : Nativo</p>
+                        <p>Inglês  : Básico</p>
+                        
                     </div>
                 </div>
             </div>
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
-                        <h5 class="widget-title card-title">INTERESTS</h5>
+                        <h5 class="widget-title card-title">INTERESSES</h5>
                         <p>Video games</p>
                         <p>Finance</p>
                         <p>Basketball</p>
