--- a/index.html
+++ b/index.html
@@ -75,12 +75,7 @@
         <main>
             <section class="intro-section">
                 <h2 class="section-title">Hello, Daisy Murphy!</h2>
-                <p>I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print
-                    media. I enjoy turning complex problems into simple, beautiful and intuitive designs. My job is to
-                    build your website so that it is functional and user-friendly but at the same time attractive.
-                    Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use.
-                    My aim is to bring across your message and identity in the most creative way. I created web design
-                    for many famous brand companies.</p>
+                <p>Descrição geral.</p>
                 <a href="#!" class="btn btn-primary btn-hire-me">HIRE ME</a>
             </section>
             <section class="resume-section">
@@ -96,16 +91,9 @@
                                 <p class="time-line-item-content">Descrição.</p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2019</span>
-                                <h6 class="time-line-item-title">Computational Thinking using Python</h6>
-                                <p class="time-line-item-subtitle">edX</p>
-                                <p class="time-line-item-content">Descrição.
-                                </p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">2015</span>
-                                <h6 class="time-line-item-title">INGLÊS INTRODUÇÃO</h6>
-                                <p class="time-line-item-subtitle">SENAC</p>
+                                <span class="badge badge-primary">2013-2017</span>
+                                <h6 class="time-line-item-title">Ensino Médio</h6>
+                                <p class="time-line-item-subtitle">Colégio Estadual Francisco Carneiro Martins</p>
                                 <p class="time-line-item-content">Descrição.
                                 </p>
                             </li>
@@ -113,34 +101,22 @@
                     </div>
                     <div class="col-lg-6">
                         <h6 class="section-subtitle">CURRICULO</h6>
-                        <h2 class="section-title">Experience</h2>
+                        <h2 class="section-title">Cursos</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2010 - 2014</span>
-                                <h6 class="time-line-item-title">UI/UX Designer</h6>
-                                <p class="time-line-item-subtitle">Web Agency</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.</p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">2008 - 2010</span>
-                                <h6 class="time-line-item-title">Web Designer</h6>
-                                <p class="time-line-item-subtitle">Apple Inc.</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
-                                </p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">2006 - 2008</span>
-                                <h6 class="time-line-item-title">Graphic Designer</h6>
-                                <p class="time-line-item-subtitle">Apple Inc.</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
-                                </p>
-                            </li>
+                                    <span class="badge badge-primary">2019</span>
+                                    <h6 class="time-line-item-title">Computational Thinking using Python</h6>
+                                    <p class="time-line-item-subtitle">edX</p>
+                                    <p class="time-line-item-content">Descrição.
+                                    </p>
+                                </li>
+                                <li class="time-line-item">
+                                    <span class="badge badge-primary">2015</span>
+                                    <h6 class="time-line-item-title">INGLÊS INTRODUÇÃO</h6>
+                                    <p class="time-line-item-subtitle">SENAC</p>
+                                    <p class="time-line-item-content">Descrição.
+                                    </p>
+                                </li>
                         </ul>
                     </div>
                 </div>
@@ -154,9 +130,26 @@
                             <img src="assets/images/001-target.svg" alt="target">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">web designing</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.</p>
+                            <h5 class="service-title">Solidworks – CAD, CAE</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Fusion 360 – CAD, CAM</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Python</h5>
+                            <p class="service-description">Matplotlib, Pandas, Numpy, CoolProp, Scipy.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -164,10 +157,63 @@
                             <img src="assets/images/003-idea.svg" alt="bulb">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">Graphic design</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
+                            <h5 class="service-title">Excel</h5>
+                            <p class="service-description">Intermediário.
                             </p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">MS Project</h5>
+                            <p class="service-description">Básico.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Powerpoint, Word</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Adobe Photoshop</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Inglês</h5>
+                            <p class="service-description">Nível básico.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Trabalho em equipe</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Proatividade</h5>
+                            <p class="service-description">Descrição.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -175,9 +221,8 @@
                             <img src="assets/images/002-development.svg" alt="development">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">Development</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
+                            <h5 class="service-title">Capacidade de análise</h5>
+                            <p class="service-description">Descrição.
                             </p>
                         </div>
                     </div>
@@ -186,9 +231,8 @@
                             <img src="assets/images/004-smartphone.svg" alt="smartphone">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">Mobile design</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
+                            <h5 class="service-title">Organização</h5>
+                            <p class="service-description">Descrição.
                             </p>
                         </div>
                     </div>
