--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
             <div class="profile-img-wrapper">
                 <img src="assets/images/Profile.png" alt="profile">
             </div>
-            <h1 class="profile-name">Daisy Murphy</h1>
+            <h1 class="profile-name">Luan Henrique</h1>
             <div class="text-center">
-                <span class="badge badge-white badge-pill profile-designation">UI / UX Designer</span>
+                <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
                 <a href="#!" class="social-link"><i class="fab fa-facebook-f"></i></a>
