--- a/resume.html
+++ b/resume.html
@@ -28,9 +28,9 @@
             <div class="profile-img-wrapper">
                 <img src="assets/images/Profile.png" alt="profile">
             </div>
-            <h1 class="profile-name">Daisy Murphy</h1>
+            <h1 class="profile-name">Luan Henrique</h1>
             <div class="text-center">
-                <span class="badge badge-white badge-pill profile-designation">UI / UX Designer</span>
+                <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
                 <a href="#!" class="social-link"><i class="fab fa-facebook-f"></i></a>
@@ -76,64 +76,42 @@
             <section class="resume-section">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h6 class="section-subtitle">RESUME</h6>
-                        <h2 class="section-title">EDUCATION</h2>
+                        <h6 class="section-subtitle">CURRICULO</h6>
+                        <h2 class="section-title">EDUCAÇÃO</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1998 - 2005</span>
-                                <h6 class="time-line-item-title">Master In Computer Science</h6>
-                                <p class="time-line-item-subtitle">MASTER, UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.</p>
+                                <span class="badge badge-primary">2018 - 2022</span>
+                                <h6 class="time-line-item-title">Engenharia Mecânica</h6>
+                                <p class="time-line-item-subtitle">Universidade Tecnológica Federal do Paraná - UTFPR</p>
+                                <p class="time-line-item-content">Descrição.</p>
                             </li>
                             <li class="time-line-item">
-                                <span class="badge badge-primary">1995 - 1998</span>
-                                <h6 class="time-line-item-title">Studied at Harvard University</h6>
-                                <p class="time-line-item-subtitle">UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.
-                                </p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">1993 - 1995</span>
-                                <h6 class="time-line-item-title">Studied at Oxford University</h6>
-                                <p class="time-line-item-subtitle">UNIVERSITY</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed tortor.
+                                <span class="badge badge-primary">2013-2017</span>
+                                <h6 class="time-line-item-title">Ensino Médio</h6>
+                                <p class="time-line-item-subtitle">Colégio Estadual Francisco Carneiro Martins</p>
+                                <p class="time-line-item-content">Descrição.
                                 </p>
                             </li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
-                        <h6 class="section-subtitle">RESUME</h6>
-                        <h2 class="section-title">Experience</h2>
+                        <h6 class="section-subtitle">CURRICULO</h6>
+                        <h2 class="section-title">Cursos</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
-                                <span class="badge badge-primary">2010 - 2014</span>
-                                <h6 class="time-line-item-title">UI/UX Designer</h6>
-                                <p class="time-line-item-subtitle">Web Agency</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.</p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">2008 - 2010</span>
-                                <h6 class="time-line-item-title">Web Designer</h6>
-                                <p class="time-line-item-subtitle">Apple Inc.</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
-                                </p>
-                            </li>
-                            <li class="time-line-item">
-                                <span class="badge badge-primary">2006 - 2008</span>
-                                <h6 class="time-line-item-title">Graphic Designer</h6>
-                                <p class="time-line-item-subtitle">Apple Inc.</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
-                                </p>
-                            </li>
+                                    <span class="badge badge-primary">2019</span>
+                                    <h6 class="time-line-item-title">Computational Thinking using Python</h6>
+                                    <p class="time-line-item-subtitle">edX</p>
+                                    <p class="time-line-item-content">Descrição.
+                                    </p>
+                                </li>
+                                <li class="time-line-item">
+                                    <span class="badge badge-primary">2015</span>
+                                    <h6 class="time-line-item-title">INGLÊS INTRODUÇÃO</h6>
+                                    <p class="time-line-item-subtitle">SENAC</p>
+                                    <p class="time-line-item-content">Descrição.
+                                    </p>
+                                </li>
                         </ul>
                     </div>
                 </div>
@@ -150,16 +128,33 @@
             </section>
             <section class="services-section">
                 <h6 class="section-subtitle">WHAT I DO</h6>
-                <h2 class="section-title">SERVICES</h2>
+                <h2 class="section-title">HABILIDADES</h2>
                 <div class="row">
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
                             <img src="assets/images/001-target.svg" alt="target">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">web designing</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.</p>
+                            <h5 class="service-title">Solidworks – CAD, CAE</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Fusion 360 – CAD, CAM</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Python</h5>
+                            <p class="service-description">Matplotlib, Pandas, Numpy, CoolProp, Scipy.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -167,10 +162,63 @@
                             <img src="assets/images/003-idea.svg" alt="bulb">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">Graphic design</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
+                            <h5 class="service-title">Excel</h5>
+                            <p class="service-description">Intermediário.
                             </p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">MS Project</h5>
+                            <p class="service-description">Básico.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Powerpoint, Word</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Adobe Photoshop</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Inglês</h5>
+                            <p class="service-description">Nível básico.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Trabalho em equipe</h5>
+                            <p class="service-description">Descrição.</p>
+                        </div>
+                    </div>
+                    <div class="media service-card col-lg-6">
+                        <div class="service-icon">
+                            <img src="assets/images/001-target.svg" alt="target">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="service-title">Proatividade</h5>
+                            <p class="service-description">Descrição.</p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -178,9 +226,8 @@
                             <img src="assets/images/002-development.svg" alt="development">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">Development</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
+                            <h5 class="service-title">Capacidade de análise</h5>
+                            <p class="service-description">Descrição.
                             </p>
                         </div>
                     </div>
@@ -189,9 +236,8 @@
                             <img src="assets/images/004-smartphone.svg" alt="smartphone">
                         </div>
                         <div class="media-body">
-                            <h5 class="service-title">Mobile design</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
+                            <h5 class="service-title">Organização</h5>
+                            <p class="service-description">Descrição.
                             </p>
                         </div>
                     </div>
