--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row">
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/fluency/50/000000/imac-settings.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Solidworks – CAD, CAE</h5>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/cnc-machine.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Fusion 360 – CAD, CAM</h5>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/external-vitaliy-gorbachev-blue-vitaly-gorbachev/50/000000/external-coding-online-learning-vitaliy-gorbachev-blue-vitaly-gorbachev.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Python</h5>
@@ -154,7 +154,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/003-idea.svg" alt="bulb">
+                            <img src="https://img.icons8.com/dusk/50/000000/ms-excel.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Excel</h5>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/microsoft-project.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">MS Project</h5>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/office-365.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Powerpoint, Word</h5>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/adobe-photoshop.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Adobe Photoshop</h5>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/external-wanicon-lineal-color-wanicon/50/000000/external-language-communication-wanicon-lineal-color-wanicon.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Inglês</h5>
@@ -200,7 +200,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/external-flatart-icons-lineal-color-flatarticons/50/000000/external-team-business-and-teamwork-flatart-icons-lineal-color-flatarticons-1.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Trabalho em equipe</h5>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/proactivity.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Proatividade</h5>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/002-development.svg" alt="development">
+                            <img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/50/000000/external-analytics-management-kiranshastry-lineal-color-kiranshastry.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Capacidade de análise</h5>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/004-smartphone.svg" alt="smartphone">
+                            <img src="https://img.icons8.com/external-itim2101-blue-itim2101/50/000000/external-organization-human-resource-itim2101-blue-itim2101.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Organização</h5>
