--- a/resume.html
+++ b/resume.html
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/fluency/50/000000/imac-settings.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Solidworks – CAD, CAE</h5>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/cnc-machine.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Fusion 360 – CAD, CAM</h5>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/external-vitaliy-gorbachev-blue-vitaly-gorbachev/50/000000/external-coding-online-learning-vitaliy-gorbachev-blue-vitaly-gorbachev.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Python</h5>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/003-idea.svg" alt="bulb">
+                            <img src="https://img.icons8.com/dusk/50/000000/ms-excel.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Excel</h5>
@@ -169,7 +169,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/microsoft-project.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">MS Project</h5>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/office-365.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Powerpoint, Word</h5>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/adobe-photoshop.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Adobe Photoshop</h5>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/external-wanicon-lineal-color-wanicon/50/000000/external-language-communication-wanicon-lineal-color-wanicon.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Inglês</h5>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/external-flatart-icons-lineal-color-flatarticons/50/000000/external-team-business-and-teamwork-flatart-icons-lineal-color-flatarticons-1.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Trabalho em equipe</h5>
@@ -214,7 +214,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/001-target.svg" alt="target">
+                            <img src="https://img.icons8.com/dusk/50/000000/proactivity.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Proatividade</h5>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/002-development.svg" alt="development">
+                            <img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/50/000000/external-analytics-management-kiranshastry-lineal-color-kiranshastry.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Capacidade de análise</h5>
@@ -233,7 +233,7 @@
                     </div>
                     <div class="media service-card col-lg-6">
                         <div class="service-icon">
-                            <img src="assets/images/004-smartphone.svg" alt="smartphone">
+                            <img src="https://img.icons8.com/external-itim2101-blue-itim2101/50/000000/external-organization-human-resource-itim2101-blue-itim2101.png"/>
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Organização</h5>
