--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Live Resume :: Portfolio</title>
+    <title>Contato</title>
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendors/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/live-resume.css">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <button class="btn btn-white btn-share ml-auto mr-3 ml-md-0 mr-md-auto"><img src="assets/images/share.svg" alt="share" class="btn-img">
-            SHARE</button>
+            COMPARTILHAR</button>
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
             <a href="resume.html" class="nav-link">CURRICULUM</a>
@@ -42,11 +42,11 @@
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
-                    <p>Nascimento: 07 Agosto 1998</p>
-                    <p>Site : github.com/luaneng</p>
-                    <p>Número : +55 42 984449614</p>
-                    <p>E-mail : launoliveiar@gmail.com</p>
-                    <p>Endereço : Guarapuava-PR, Vila Bela</p>
+                    <p>NASCIMENTO: 07 Agosto 1998</p>
+                    <p>SITE : <a href="github.com/luaneng">github.com/luaneng</a></p>
+                    <p>NÚMERO : <a href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42)98444-9614</a></p>
+                    <p>EMAIL : launoliveiar@gmail.com</p>
+                    <p>ENDEREÇO : <a href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
                         class="btn-img">DOWNLOAD CV </button>
                 </div>
@@ -79,18 +79,18 @@
                 
                 <div class="contact-cards-wrapper">
                     <div class="contact-card">
-                        <h6 class="contact-card-title">CALL US</h6>
-                        <p class="contact-card-content">+987 654 3210 , +987 654 3210</p>
+                        <h6 class="contact-card-title">Número</h6>
+                        <p class="contact-card-content">+55 (42)98444-9614</p>
                     </div>
                     <div class="contact-card">
-                        <h6 class="contact-card-title">Email Us</h6>
-                        <p class="contact-card-content">hello@liveresume.com</p>
+                        <h6 class="contact-card-title">Email</h6>
+                        <p class="contact-card-content">launoliveiar@gmail.com</p>
                     </div>
                 </div>
 
                 <form action="#!" class="contact-form">
                     <div class="form-group form-group-name">
-                      <label for="name" class="sr-only">Name</label>
+                      <label for="name" class="sr-only">Nome</label>
                       <input type="text" name="name" id="name" class="form-control" placeholder="NAME">
                     </div>
                     <div class="form-group form-group-email">
@@ -98,18 +98,18 @@
                         <input type="email" name="email" id="email" class="form-control" placeholder="EMAIL">
                     </div>
                     <div class="form-group">
-                        <label for="message" class="sr-only">Message</label>
+                        <label for="message" class="sr-only">Mensagem</label>
                         <textarea name="message" id="message" class="form-control" placeholder="MESSAGE" rows="5"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary form-submit-btn">SEND MESSAGE</button>
+                    <button type="submit" class="btn btn-primary form-submit-btn">Enviar mensagem</button>
                 </form>
 
             </section>
             <section class="location-section">
-                <h5 class="section-title">MY LOCATION</h5>
+                <h5 class="section-title">Minha Localização</h5>
 
                 <div class="map-wrapper embed-responsive embed-responsive-16by9"">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6780.360388122327!2d-73.94920877520023!3d40.64704896956227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b449a659007%3A0xc4308a4849d49943!2s135%20E%2029th%20St%2C%20Brooklyn%2C%20NY%2011226%2C%20USA!5e0!3m2!1sen!2sin!4v1582520722599!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
+                    <iframe src="https://maps.google.com/maps?q=R.%20Cel.%20Ant%C3%B4nio%20Vila%C3%A7a,%20489%20-%20Vila%20Bela,%20Guarapuava%20-%20PR,%2085027-160&t=&z=15&ie=UTF8&iwloc=&output=embed" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
                 </div>
             </section>
             <footer>Live Resume @ <a href="https://www.bootstrapdash.com" target="_blank" rel="noopener noreferrer">BootstrapDash</a>. All Rights Reserved 2020</footer>
