--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Live Resume :: Resume</title>
+    <title>Curriculo</title>
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendors/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/live-resume.css">
@@ -42,11 +42,11 @@
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
-                    <p>Nascimento: 07 Agosto 1998</p>
-                    <p>Site : github.com/luaneng</p>
-                    <p>Número : +55 42 984449614</p>
-                    <p>E-mail : launoliveiar@gmail.com</p>
-                    <p>Endereço : Guarapuava-PR, Vila Bela</p>
+                    <p>NASCIMENTO: 07 Agosto 1998</p>
+                    <p>SITE : <a href="github.com/luaneng">github.com/luaneng</a></p>
+                    <p>NÚMERO : <a href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42)98444-9614</a></p>
+                    <p>EMAIL : launoliveiar@gmail.com</p>
+                    <p>ENDEREÇO : <a href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
                         class="btn-img">DOWNLOAD CV </button>
                 </div>
