--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Live Resume :: Home</title>
+    <title>Luan Henrique</title>
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendors/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/live-resume.css">
@@ -14,10 +14,9 @@
 <body>
     <header>
         <button class="btn btn-white btn-share ml-auto mr-3 ml-md-0 mr-md-auto"><img src="assets/images/share.svg" alt="share" class="btn-img">
-            SHARE</button>
+            COMPARTILHAR</button>
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
-            <a href="resume.html" class="nav-link">CURRICULUM</a>
             <a href="contact.html" class="nav-link active">CONTACTO</a>
         </nav>
         <button class="btn btn-menu-toggle btn-white rounded-circle" data-toggle="collapsible-nav"
@@ -34,19 +33,17 @@
             </div>
             <nav class="social-links">
                 <a href="#!" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-twitter"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-behance"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-dribbble"></i></a>
-                <a href="#!" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="#!" class="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#!" class="github.com/luaneng"><i class="fab fa-github"></i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
                 <div class="widget-content">
                     <p>NASCIMENTO: 07 Agosto 1998</p>
-                    <p>SITE : github.com/luaneng</p>
-                    <p>NÚMERO : +55 42 984449614</p>
+                    <p>SITE : <a href="github.com/luaneng">github.com/luaneng</a></p>
+                    <p>NÚMERO : <a href="https://api.whatsapp.com/send?phone=5542984449614">+55 (42)98444-9614</a></p>
                     <p>EMAIL : launoliveiar@gmail.com</p>
-                    <p>ENDEREÇO : Guarapuava-PR, Vila Bela</p>
+                    <p>ENDEREÇO : <a href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
                         class="btn-img">DOWNLOAD CV </button>
                 </div>
@@ -74,14 +71,14 @@
         </aside>
         <main>
             <section class="intro-section">
-                <h2 class="section-title">Hello, Daisy Murphy!</h2>
+                <h2 class="section-title">Olá!</h2>
                 <p>Descrição geral.</p>
                 <a href="#!" class="btn btn-primary btn-hire-me">HIRE ME</a>
             </section>
             <section class="resume-section">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h6 class="section-subtitle">CURRICULO</h6>
+                        <h6 class="section-subtitle"></h6>
                         <h2 class="section-title">EDUCAÇÃO</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
@@ -100,7 +97,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-6">
-                        <h6 class="section-subtitle">CURRICULO</h6>
+                        <h6 class="section-subtitle"></h6>
                         <h2 class="section-title">Cursos</h2>
                         <ul class="time-line">
                             <li class="time-line-item">
@@ -122,7 +119,7 @@
                 </div>
             </section>
             <section class="services-section">
-                <h6 class="section-subtitle">WHAT I DO</h6>
+                <h6 class="section-subtitle"></h6>
                 <h2 class="section-title">HABILIDADES</h2>
                 <div class="row">
                     <div class="media service-card col-lg-6">
