--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             COMPARTILHAR</button>
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
-            <a href="contact.html" class="nav-link active">CONTACTO</a>
+            <a href="contact.html" class="nav-link">CONTACTO</a>
         </nav>
         <button class="btn btn-menu-toggle btn-white rounded-circle" data-toggle="collapsible-nav"
             data-target="collapsible-nav"><img src="assets/images/hamburger.svg" alt="hamburger"></button>
