--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendors/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/live-resume.css">
+    <link rel="icon" href="assets/images/icon.ico">
 </head>
 
 <body>
@@ -61,10 +62,10 @@
                 <div class="card-body">
                     <div class="widget-content">
                         <h5 class="widget-title card-title">INTERESSES</h5>
-                        <p>Video games</p>
-                        <p>Finance</p>
-                        <p>Basketball</p>
-                        <p>Theatre</p>
+                        <p>Programação</p>
+                        <p>Automação Industrial</p>
+                        <p>Modelagem 3D</p>
+
                     </div>
                 </div>
             </div>
@@ -239,20 +240,17 @@
                 <div id="testimonialCarousel" class="testimonial-carousel carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <p class="testimonial-content">Mauris magna sapien, pharetra consectetur fringilla vitae,
-                                interdum sed tortor.</p>
+                            <p class="testimonial-content">TEXTO 1.</p>
                             <img src="assets/images/Profile.png" alt="profile" class="testimonial-img">
                             <p class="testimonial-name">Nout Golstein</p>
                         </div>
                         <div class="carousel-item">
-                            <p class="testimonial-content">Mauris magna sapien, pharetra consectetur fringilla vitae,
-                                interdum sed tortor.</p>
+                            <p class="testimonial-content">TEXTO 2.</p>
                             <img src="assets/images/Profile.png" alt="profile" class="testimonial-img">
                             <p class="testimonial-name">Nout Golstein</p>
                         </div>
                         <div class="carousel-item">
-                            <p class="testimonial-content">Mauris magna sapien, pharetra consectetur fringilla vitae,
-                                interdum sed tortor.</p>
+                            <p class="testimonial-content">TEXTO 3.</p>
                             <img src="assets/images/Profile.png" alt="profile" class="testimonial-img">
                             <p class="testimonial-name">Nout Golstein</p>
                         </div>
