--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendors/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/live-resume.css">
+    <link rel="icon" href="assets/images/icon-contact.ico">
 </head>
 
 <body>
@@ -32,9 +33,9 @@
                 <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
-                <a href="grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass " ></i></a>
-                <a href="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in " > </i></a>
-                <a href="github.com/luaneng"><i class="fab fa-github"> </i></a>
+                <a href="grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass fa-2x    " ></i></a>
+                <a href="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in fa-2x " > </i></a>
+                <a href="github.com/luaneng"><i class="fab fa-github fa-2x  "> </i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
@@ -61,23 +62,22 @@
                 <div class="card-body">
                     <div class="widget-content">
                         <h5 class="widget-title card-title">INTERESSES</h5>
-                        <p>Video games</p>
-                        <p>Finance</p>
-                        <p>Basketball</p>
-                        <p>Theatre</p>
+                        <p>Programação</p>
+                        <p>Automação Industrial</p>
+                        <p>Modelagem 3D</p>
                     </div>
                 </div>
             </div>
         </aside>
         <main>
             <section class="contact-section">
-                <h2 class="section-title">GET IN TOUCH</h2>
-                <p class="mb-4">If you’d like to talk about a project, our work or anything else then get in touch.</p>
+                <h2 class="section-title">ENTRE EM CONTATO</h2>
+                <p class="mb-4">Se você quiser falar sobre um projeto, meu trabalho ou qualquer outra coisa, entre em contato.</p>
                 
                 <div class="contact-cards-wrapper">
                     <div class="contact-card">
                         <h6 class="contact-card-title">Número</h6>
-                        <p class="contact-card-content">+55 (42)98444-9614</p>
+                        <p class="contact-card-content">+55 (42) 98444-9614</p>
                     </div>
                     <div class="contact-card">
                         <h6 class="contact-card-title">Email</h6>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <form action="#!" class="contact-form">
+                <form action="https://formsubmit.co/launoliveiar@gmail.com" method="POST" class="contact-form">
                     <div class="form-group form-group-name">
                       <label for="name" class="sr-only">Nome</label>
                       <input type="text" name="name" id="name" class="form-control" placeholder="NAME">
