--- a/index.html
+++ b/index.html
@@ -282,12 +282,6 @@
                         <a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/?view=cm&to=%7Bemail_address%7D&su=&body=https://luaneng.github.io/profile/&bcc=%7Bemail_address%7D&cc=%7Bemail_address%7D">
                             <button class="social-media-btn"><i class="fab fa-google"></i></button></a>
                         </a>
-                        <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?url=https://luaneng.github.io/profile/&text=&via=">
-                            <button class="social-media-btn"><i class="fab fa-twitter"></i></button></a>
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/sharer/sharer.php?u=https%3A//luaneng.github.io/profile/">
-                            <button class="social-media-btn"><i class="fab fa-facebook-f"></i></button></a>
-                        </a>
                         <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/shareArticle?url=https://luaneng.github.io/profile/&title=">
                             <button class="social-media-btn"><i class="fab fa-linkedin-in"></i></button></a>
                         </a>
@@ -295,7 +289,7 @@
                     </div>
                     <div class="link-container">
 
-                        <textarea id="textArea">https://luaneng.github.io/profile</textarea>
+                        <textarea id="textArea" class="link">https://luaneng.github.io/profile</textarea>
                         <button onclick="copyToClipBoard()" class="copy-btn">Copiar</button>
 
 
